修改首页背景/添加链接

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav id="header-nav">
             <ul id="header-ul">
                 <li><a href="index.html" class="header-li">首页</a></li>
-                <li><a href="pages/topic.html" class="header-li">专题研究</a></li>
+                <li><a href="pages/topic-s.html" class="header-li">专题研究</a></li>
                 <li><a href="pages/search.html" class="header-li">搜索页</a></li>
             </ul>
         </nav>
