--- a/pages/d-pics.html
+++ b/pages/d-pics.html
@@ -32,7 +32,7 @@
         <nav id="header-nav">
             <ul id="header-ul">
                 <li><a href="../index.html" class="header-li">首页</a></li>
-                <li><a href="" class="header-li">专题研究</a></li>
+                <li><a href="topic-s.html" class="header-li">专题研究</a></li>
                 <li><a href="search.html" class="header-li">搜索页</a></li>
             </ul>
         </nav>
