--- a/pages/search.html
+++ b/pages/search.html
@@ -108,8 +108,8 @@
         <nav id="header-nav">
             <ul id="header-ul">
                 <li><a href="../index.html" class="header-li">首页</a></li>
-                <li><a href="" class="header-li">专题研究</a></li>
-                <li><a href="" class="header-li">搜索页</a></li>
+                <li><a href="topic-s.html" class="header-li">专题研究</a></li>
+                <li><a href="search.html" class="header-li">搜索页</a></li>
             </ul>
         </nav>
         <p class="w-3/10 text-white content-center">中国历史遗存档案</p>
