首页亮点更新图片/专题汇总页背景

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                         <div class="tranding-slide-img">
-                            <img src="pics/1.jpg" alt="Tranding">
+                            <img src="pics/亮点更新/1.png" alt="Tranding">
                         </div>
                         <div class="tranding-slide-content">
                             <div class="tranding-slide-content-bottom">
@@ -82,7 +82,7 @@
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                         <div class="tranding-slide-img">
-                            <img src="pics/2.jpg" alt="Tranding">
+                            <img src="pics/亮点更新/2.jpg" alt="Tranding">
                         </div>
                         <div class="tranding-slide-content">
                             <div class="tranding-slide-content-bottom">
@@ -96,7 +96,7 @@
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                         <div class="tranding-slide-img">
-                            <img src="pics/1.jpg" alt="Tranding">
+                            <img src="pics/亮点更新/3.jpg" alt="Tranding">
                         </div>
                         <div class="tranding-slide-content">
                             <div class="tranding-slide-content-bottom">
@@ -110,7 +110,7 @@
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                         <div class="tranding-slide-img">
-                            <img src="pics/2.jpg" alt="Tranding">
+                            <img src="pics/亮点更新/4.jpg" alt="Tranding">
                         </div>
                         <div class="tranding-slide-content">
                             <div class="tranding-slide-content-bottom">
@@ -124,7 +124,7 @@
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                         <div class="tranding-slide-img">
-                            <img src="pics/1.jpg" alt="Tranding">
+                            <img src="pics/亮点更新/5.jpg" alt="Tranding">
                         </div>
                         <div class="tranding-slide-content">
                             <div class="tranding-slide-content-bottom">
@@ -138,7 +138,7 @@
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                         <div class="tranding-slide-img">
-                            <img src="pics/2.jpg" alt="Tranding">
+                            <img src="pics/亮点更新/6.jpg" alt="Tranding">
                         </div>
                         <div class="tranding-slide-content">
                             <div class="tranding-slide-content-bottom">
