--- a/pages/topic-s.html
+++ b/pages/topic-s.html
@@ -50,7 +50,7 @@
         </div>
     </header>
 
-    <main class="px-20 py-10 gap-10 bg-black/30">
+    <main class="px-20 py-10 gap-10 bg-white">
         <h1 class="text-5xl text-primary">专题研究 THEMATIC RESEARCH</h1>
         
         <div class="relative w-5/6">
@@ -60,7 +60,7 @@
             <i class="fa-solid fa-search absolute left-3 top-3 text-black/50"></i>
         </div>
         
-        <div class="grid grid-cols-4 gap-6">
+        <div class="grid grid-cols-4 gap-10">
             <div class="ts-items"></div>
             <div class="ts-items"></div>
             <div class="ts-items"></div>
